--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "e907e0fe-180d-47ca-9606-ef7593d6c9be"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
